unpackaged/main/default/objects/litify_docs__Input__c/litify_docs__Input__c.object-meta.xml
<CustomObject>
    <description>Input items in an Input Group</description>
    <label>Merge Input</label>
    <nameField>
        <label>Merge Input Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Merge Inputs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>