unpackaged/main/default/objects/litify_docs__Input__c/fields/litify_docs__Child_Input_Order__c.field-meta.xml
<CustomField>
    <fullName>litify_docs__Child_Input_Order__c</fullName>
    <description>The order of a child input relative to other child inputs under a given parent input.</description>
    <label>Child Input Order</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>