unpackaged/main/default/objects/litify_docs__Input__c/fields/litify_docs__Child_Relationship_Api_Name__c.field-meta.xml
<CustomField>
    <fullName>litify_docs__Child_Relationship_Api_Name__c</fullName>
    <label>Child Relationship Api Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>