unpackaged/main/default/objects/litify_docs__Input__c/fields/litify_docs__Current_Date__c.field-meta.xml
<CustomField>
    <fullName>litify_docs__Current_Date__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Current Date</label>
    <type>Checkbox</type>
</CustomField>