unpackaged/main/default/objects/litify_docs__Input__c/fields/litify_docs__Default_Value__c.field-meta.xml
<CustomField>
    <fullName>litify_docs__Default_Value__c</fullName>
    <label>Default Value</label>
    <length>600</length>
    <type>LongTextArea</type>
</CustomField>