unpackaged/main/default/objects/litify_docs__Input__c/fields/litify_docs__Disabled__c.field-meta.xml
<CustomField>
    <fullName>litify_docs__Disabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the field should appear as disabled on the UI for the end user.</description>
    <inlineHelpText>Indicates whether the field should appear as disabled on the UI for the end user.</inlineHelpText>
    <label>Disabled</label>
    <type>Checkbox</type>
</CustomField>