unpackaged/main/default/objects/litify_docs__Input__c/fields/litify_docs__Has_File__c.field-meta.xml
<CustomField>
    <fullName>litify_docs__Has_File__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if this Input has an associated Source File, such as a Global Image.</description>
    <inlineHelpText>True if this Input has an associated Source File, such as a Global Image.</inlineHelpText>
    <label>Has File</label>
    <type>Checkbox</type>
</CustomField>