unpackaged/main/default/objects/litify_docs__Input__c/fields/litify_docs__Hidden__c.field-meta.xml
<CustomField>
    <fullName>litify_docs__Hidden__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, this input will be hidden from view to the end user.</description>
    <inlineHelpText>If checked, this input will be hidden from view to the end user.</inlineHelpText>
    <label>Hidden</label>
    <type>Checkbox</type>
</CustomField>