unpackaged/main/default/objects/litify_docs__Input__c/fields/litify_docs__Input_Number__c.field-meta.xml
<CustomField>
    <fullName>litify_docs__Input_Number__c</fullName>
    <description>An auto number to serve as a unique identifier for the input, for usage in the input&#39;s merge tag.</description>
    <displayFormat>{00000}</displayFormat>
    <label>Input Number</label>
    <type>AutoNumber</type>
</CustomField>