unpackaged/main/default/objects/litify_docs__Input__c/fields/litify_docs__Input_Number_Formula__c.field-meta.xml
<CustomField>
    <fullName>litify_docs__Input_Number_Formula__c</fullName>
    <formula>IF(ISBLANK(litify_docs__Input_Number_Override__c), litify_docs__Input_Number__c, litify_docs__Input_Number_Override__c)</formula>
    <label>Input Number Formula</label>
    <type>Text</type>
</CustomField>