unpackaged/main/default/objects/litify_docs__Input__c/fields/litify_docs__Input_Number_Override__c.field-meta.xml
<CustomField>
    <fullName>litify_docs__Input_Number_Override__c</fullName>
    <label>Input Number Override</label>
    <length>30</length>
    <type>Text</type>
</CustomField>