unpackaged/main/default/objects/litify_docs__Input__c/fields/litify_docs__Input_Type__c.field-meta.xml
<CustomField>
    <fullName>litify_docs__Input_Type__c</fullName>
    <description>Used for categorization when searching for inputs to add to a template.</description>
    <label>Input Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Freeform Entry</fullName>
            </value>
            <value>
                <fullName>Omitted</fullName>
            </value>
            <value>
                <fullName>Salesforce Field</fullName>
            </value>
            <value>
                <fullName>Salesforce Record (Single)</fullName>
            </value>
            <value>
                <fullName>Salesforce Records (Multiple)</fullName>
            </value>
            <value>
                <fullName>Salesforce Records (All)</fullName>
            </value>
            <value>
                <fullName>Conditional Section</fullName>
            </value>
            <value>
                <fullName>Global Image</fullName>
            </value>
            <value>
                <fullName>Multi-merge</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>