unpackaged/main/default/objects/litify_docs__Input__c/fields/litify_docs__Object_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>litify_docs__Object_Field_Name__c</fullName>
    <description>Fully qualified object field name</description>
    <inlineHelpText>Fully qualified object field name</inlineHelpText>
    <label>Object Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>