unpackaged/main/default/objects/litify_docs__Input__c/fields/litify_docs__Parent_Input__c.field-meta.xml
<CustomField>
    <fullName>litify_docs__Parent_Input__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Self-lookup that is used to relate child inputs to parent inputs.</description>
    <inlineHelpText>Self-lookup that is used to relate child inputs to parent inputs.</inlineHelpText>
    <label>Parent Input</label>
    <referenceTo>litify_docs__Input__c</referenceTo>
    <relationshipLabel>Child Inputs</relationshipLabel>
    <relationshipName>Child_Inputs</relationshipName>
    <type>Lookup</type>
</CustomField>