unpackaged/main/default/objects/litify_docs__Input__c/fields/litify_docs__Prompt__c.field-meta.xml
<CustomField>
    <fullName>litify_docs__Prompt__c</fullName>
    <description>Prompt for user on Input</description>
    <inlineHelpText>Prompt for user on Input</inlineHelpText>
    <label>Prompt</label>
    <type>TextArea</type>
</CustomField>