unpackaged/main/default/objects/litify_docs__Input__c/fields/litify_docs__Required__c.field-meta.xml
<CustomField>
    <fullName>litify_docs__Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines if the Input is Required on the UI</description>
    <inlineHelpText>Determines if the Input is Required on the UI</inlineHelpText>
    <label>Required</label>
    <type>Checkbox</type>
</CustomField>