unpackaged/main/default/objects/litify_docs__Input__c/fields/litify_docs__Starting_Object__c.field-meta.xml
<CustomField>
    <fullName>litify_docs__Starting_Object__c</fullName>
    <description>Object through which the input can be related to a template.</description>
    <inlineHelpText>Object through which the input can be related to a template.</inlineHelpText>
    <label>Starting Object</label>
    <length>64</length>
    <required>true</required>
    <type>Text</type>
</CustomField>