unpackaged/main/default/objects/litify_docs__Input__c/fields/litify_docs__Starting_Record_Path__c.field-meta.xml
<CustomField>
    <fullName>litify_docs__Starting_Record_Path__c</fullName>
    <description>Indicates that the input should start from a parent of the starting record, instead of the starting record itself. Stores the path of lookup fields to traverse from the starting record in order to reach the new starting record.</description>
    <label>Starting Record Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>