unpackaged/main/default/objects/litify_docs__Input__c/fields/litify_docs__Times_Merged__c.field-meta.xml
<CustomField>
    <fullName>litify_docs__Times_Merged__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of times an input has been merged</description>
    <label>Times Merged</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>