unpackaged/main/default/objects/litify_docs__Input__c/fields/litify_docs__Type__c.field-meta.xml
<CustomField>
    <fullName>litify_docs__Type__c</fullName>
    <description>Type of input</description>
    <inlineHelpText>Type of input</inlineHelpText>
    <label>Data Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>litify_docs__Input_Data_Types</valueSetName>
    </valueSet>
</CustomField>